all simulations 9 and 10

--- a/simulations-results7.html
+++ b/simulations-results7.html
@@ -184,8 +184,8 @@ summary {
 </div>
 
 
-<div id="cis" class="section level2">
-<h2>CI’s</h2>
+<div id="cis-for-beta-slope" class="section level2">
+<h2>CI’s for Beta (slope)</h2>
 <pre><code>## Warning in is.na(results$ee): is.na() applied to non-(list or vector) of
 ## type 'NULL'</code></pre>
 <pre class="r"><code>library(knitr)
