--- a/simulations-results8.html
+++ b/simulations-results8.html
@@ -205,7 +205,7 @@ kable(results[,c(header.cols,7,8,9)],
 <th align="right">mu.lower</th>
 <th align="right">mu.upper</th>
 <th align="right">phi</th>
-<th align="right">cover.chisq</th>
+<th align="left">cover.chisq</th>
 <th align="right">cover.boots</th>
 <th align="right">cover.vgam</th>
 </tr>
@@ -219,8 +219,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">1</td>
-<td align="right">0.84</td>
-<td align="right">0.79</td>
+<td align="left">NA</td>
+<td align="right">0.92</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="even">
@@ -231,8 +231,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">3</td>
-<td align="right">0.94</td>
-<td align="right">0.92</td>
+<td align="left">NA</td>
+<td align="right">0.97</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="odd">
@@ -243,8 +243,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">5</td>
-<td align="right">0.96</td>
-<td align="right">0.93</td>
+<td align="left">NA</td>
+<td align="right">0.97</td>
 <td align="right">NaN</td>
 </tr>
 </tbody>
@@ -263,7 +263,7 @@ kable(results[,c(header.cols,7,8,9)],
 <th align="right">mu.lower</th>
 <th align="right">mu.upper</th>
 <th align="right">phi</th>
-<th align="right">pow.chisq</th>
+<th align="left">pow.chisq</th>
 <th align="right">pow.boots</th>
 <th align="right">pow.vgam</th>
 </tr>
@@ -277,8 +277,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">1</td>
-<td align="right">0.73</td>
-<td align="right">0.75</td>
+<td align="left">NA</td>
+<td align="right">0.71</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="even">
@@ -289,8 +289,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">3</td>
-<td align="right">0.26</td>
-<td align="right">0.34</td>
+<td align="left">NA</td>
+<td align="right">0.17</td>
 <td align="right">NaN</td>
 </tr>
 <tr class="odd">
@@ -301,8 +301,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">5</td>
-<td align="right">0.18</td>
-<td align="right">0.24</td>
+<td align="left">NA</td>
+<td align="right">0.08</td>
 <td align="right">NaN</td>
 </tr>
 </tbody>
@@ -321,7 +321,7 @@ kable(results[,c(header.cols,7,8,9)],
 <th align="right">mu.lower</th>
 <th align="right">mu.upper</th>
 <th align="right">phi</th>
-<th align="right">med.chisq</th>
+<th align="left">med.chisq</th>
 <th align="right">med.boots</th>
 <th align="left">med.vgam</th>
 </tr>
@@ -335,8 +335,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">1</td>
-<td align="right">4.24</td>
-<td align="right">3.80</td>
+<td align="left">NA</td>
+<td align="right">4.71</td>
 <td align="left">NA</td>
 </tr>
 <tr class="even">
@@ -347,8 +347,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">3</td>
-<td align="right">9.70</td>
-<td align="right">9.35</td>
+<td align="left">NA</td>
+<td align="right">11.19</td>
 <td align="left">NA</td>
 </tr>
 <tr class="odd">
@@ -359,8 +359,8 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">5</td>
-<td align="right">15.86</td>
-<td align="right">15.77</td>
+<td align="left">NA</td>
+<td align="right">16.57</td>
 <td align="left">NA</td>
 </tr>
 </tbody>
@@ -379,7 +379,7 @@ kable(results[,c(header.cols,7,8,9)],
 <th align="right">mu.lower</th>
 <th align="right">mu.upper</th>
 <th align="right">phi</th>
-<th align="right">err.chisq</th>
+<th align="left">err.chisq</th>
 <th align="right">err.boots</th>
 <th align="right">err.vgam</th>
 </tr>
@@ -393,7 +393,7 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">1</td>
-<td align="right">0</td>
+<td align="left">NA</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -405,7 +405,7 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">3</td>
-<td align="right">0</td>
+<td align="left">NA</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -417,7 +417,7 @@ kable(results[,c(header.cols,7,8,9)],
 <td align="right">0.05</td>
 <td align="right">1</td>
 <td align="right">5</td>
-<td align="right">0</td>
+<td align="left">NA</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
